--- a/nixSitioWeb/src/app/libroDeAgua/libroDeAgua.component.css
+++ b/nixSitioWeb/src/app/libroDeAgua/libroDeAgua.component.css
@@ -1,12 +1,6 @@
 section{
-    background: #2a2e32;
-    color: #009DD8;
+    background-color: 
 }
-input {
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    border: 1px solid #000000;
-    padding: 0 4px 0 4px;
-    
- }
+label, h1{
+    color: black;
+}
