--- a/nixSitioWeb/src/app/app.component.html
+++ b/nixSitioWeb/src/app/app.component.html
@@ -8,14 +8,15 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
+
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: rgb(64, 70, 71);
 }
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: #00adee;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -27,13 +28,13 @@ body {
 }
 
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: rgb(0, 175, 239, 0.8);
   color: black;
 }
 
-.active {
-  background-color: #4CAF50;
-  color: white;
+.topnav .active{
+  background-color:  #00adee;
+  color: black;
 }
 
 .topnav .icon {
