--- a/nixSitioWeb/src/app/login/login.component.html
+++ b/nixSitioWeb/src/app/login/login.component.html
@@ -2,17 +2,18 @@
 <section id="registro" class="mb-5">
         <div class="contenedor">
           <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-4">
+            <div class="col-xs-12 col-sm-6 col-md-3"></div>
+            <div class="col-xs-12 col-sm-6 col-md-6">
               <div class="card_register">
                 <div class="card">
                   <div class="card-body text-center">
                     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                             <h1 class="h3 mb-3 font-weigh-normal">Login</h1>
     <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-        <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-            <div *ngIf="f.email.errors.required">Email es requerido</div>
+        <label for="dni">DNI</label>
+        <input type="number" formControlName="dni" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.dni.errors }" />
+        <div *ngIf="submitted && f.dni.errors" class="invalid-feedback">
+            <div *ngIf="f.dni.errors.required">dni es requerido</div>
         </div>
     </div>
     <div class="form-group">
